--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -386,6 +386,7 @@ video {
 \*------------------------------------*/
 
 $fn-size: 0.75em;
+$fn-color: #ff0000;
 
 @import "includes/shared/text-types";
 @import "includes/shared/bibles";
