--- a/src/paragraph.scss
+++ b/src/paragraph.scss
@@ -324,6 +324,7 @@ td {
 \*------------------------------------*/
 
 $fn-size: 0.6em;
+$fn-color: #000;
 
 @import "includes/shared/text-types";
 @import "includes/shared/bibles";
