--- a/src/verse.scss
+++ b/src/verse.scss
@@ -219,6 +219,7 @@ $level-6-font: italic bold 0.9em $sans-font;
 \*------------------------------------*/
 
 $fn-size: 0.6em;
+$fn-color: #000;
 
 @import "includes/shared/fn";
 @import "includes/shared/bibles";
