--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -324,6 +324,7 @@ td {
 \*------------------------------------*/
 
 $fn-size: 0.6em;
+$fn-color: #ff0000;
 
 @import "includes/shared/text-types";
 
