--- a/src/verse.scss
+++ b/src/verse.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     verse.css
- * VERSION:  2017-03-30
+ * VERSION:  2017-03-31
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -115,23 +115,6 @@ $level-6-font: italic bold 0.9em $sans-font;
 }
 
 
-/**
- * Part title, for use with <p>
- */
-
-.part {
-  background: #333;
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  margin: -1em -5.5% 1em -5.5%;
-  padding: 1.4em 0 1em 0;
-  text-align: center;
-  text-indent: 0;
-}
-
-
 
 
 
@@ -200,6 +183,11 @@ $level-6-font: italic bold 0.9em $sans-font;
 \*------------------------------------*/
 
 @import "includes/ws/blocks";
+
+ol,
+ul {
+  list-style-type: none;
+}
 
 
 
