--- a/src/paragraph.scss
+++ b/src/paragraph.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     paragraph.css
- * VERSION:  2017-03-30
+ * VERSION:  2017-03-31
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -114,23 +114,6 @@ $level-6-font: italic bold 0.9em $sans-font;
 }
 
 
-/**
- * Part title, for use with <p>
- */
-
-.part {
-  background: #333;
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  margin: -1em -5.5% 1em -5.5%;
-  padding: 1.4em 0 1em 0;
-  text-align: center;
-  text-indent: 0;
-}
-
-
 
 
 
@@ -209,13 +192,11 @@ aside {
   margin-bottom: 1em;
 }
 
-@import "includes/shared/lists";
-
-@include list-items(0.2em 0);
-@include none-list-items(2em, -1em);
-
-@import "includes/shared/list-helpers";
-@import "includes/shared/def-lists";
+ol,
+ul {
+  list-style-type: none;
+  @include list-layout();
+}
 
 
 
