--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     wordsearch.css
- * VERSION:  2017-03-30
+ * VERSION:  2017-03-31
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -121,6 +121,7 @@ $level-6-font: italic bold 0.9em $sans-font;
 .part {
   background: #333;
   color: #fff;
+  display: block;
   font-size: 1.5em;
   font-weight: bold;
   letter-spacing: 0.2em;
